# zcbor

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  MANIFEST.in  MIGRATION_GUIDE.md  README.md  RELEASE_NOTES.md  __init__.py  add_helptext.py  pypi_README.md  pyproject.toml  setup.py
.github/workflows/: create_run_tests.py  run-tests.yaml  run-tests.yaml.in
cddl_gen/: __init__.py  cddl_gen.py
cmake/: extensions.cmake  zcborConfig.cmake.in
fuzz-test/: CMakeLists.txt  fuzz_pet.c  main_entry.h  readme.md
include/: cbor_common.h  cbor_debug.h  cbor_decode.h  cbor_encode.h  zcbor_common.h  zcbor_debug.h  zcbor_decode.h  zcbor_diag_print.h  zcbor_encode.h  zcbor_print.h  zcbor_tags.h
samples/hello_world/: CMakeLists.txt  README.md
samples/hello_world/src/: main.c
samples/pet/: CMakeLists.txt  README.md  pet.cmake  pet1.yml
scripts/: __init__.py  add_helptext.py  black.sh  build_zcbor.sh  cddl_gen.py  publish_release.sh  regenerate_samples.py  requirements-base.txt  requirements-test.txt  update_version.py
src/: CMakeLists.txt  cbor_common.c  cbor_decode.c  cbor_encode.c  zcbor_common.c  zcbor_decode.c  zcbor_encode.c  zcbor_print.c
tests/: be_test.sh  test.sh  verbose_test.sh
tests/cases/: corner_cases.cddl  cose.cddl  everything.cddl  everything_example0.yaml  everything_example1.yaml  manifest-moran3.cddl  manifest-moran4.cddl  manifest12.cddl  manifest14.cddl  manifest14.priv  manifest14.pub  manifest14_example0.cborhex  manifest14_example1.cborhex  manifest14_example2.cborhex  manifest16.cddl  (+25 more)
tests/cbor_decode/test2_suit/: CMakeLists.txt  manifest2.cddl  testcase.yaml
tests/cbor_decode/test2_suit/src/: main.c
tests/cbor_decode/test3_simple/: CMakeLists.txt  pet.cddl  serial_recovery.cddl  testcase.yaml
tests/cbor_decode/test3_simple/src/: main.c
tests/cbor_decode/test7_suit9_simple/: CMakeLists.txt  testcase.yaml
tests/cbor_decode/test7_suit9_simple/src/: main.c
tests/cbor_decode/test8_suit12/: CMakeLists.txt  testcase.yaml
tests/cbor_decode/test8_suit12/src/: main.c
tests/cbor_decode/test9_manifest14/: CMakeLists.txt  prj.conf  testcase.yaml
tests/cbor_decode/test9_manifest14/src/: main.c
tests/cbor_encode/test1_suit/: CMakeLists.txt  testcase.yaml
tests/cbor_encode/test1_suit/src/: main.c
tests/cbor_encode/test2_simple/: CMakeLists.txt  testcase.yaml
tests/cbor_encode/test2_simple/src/: main.c
tests/cbor_encode/test3_strange/: CMakeLists.txt  strange.cddl  testcase.yaml
tests/cbor_encode/test3_strange/src/: main.c
tests/decode/test1_suit_old_formats/: CMakeLists.txt  prj.conf  testcase.yaml
tests/decode/test1_suit_old_formats/src/: main.c
tests/decode/test2_suit/: CMakeLists.txt  prj.conf  testcase.yaml
tests/decode/test2_suit/src/: main.c
tests/decode/test3_simple/: CMakeLists.txt  testcase.yaml
tests/decode/test3_simple/src/: main.c
tests/decode/test5_corner_cases/: CMakeLists.txt  floats.py  prj.conf  testcase.yaml
tests/decode/test5_corner_cases/boards/: qemu_malta_be.conf
tests/decode/test5_corner_cases/src/: main.c
tests/decode/test5_strange/: CMakeLists.txt  floats.py  testcase.yaml
tests/decode/test5_strange/src/: main.c
tests/decode/test7_suit9_simple/: CMakeLists.txt  prj.conf  testcase.yaml
tests/decode/test7_suit9_simple/src/: main.c
tests/decode/test8_suit12/: CMakeLists.txt  prj.conf  testcase.yaml
tests/decode/test8_suit12/src/: main.c
tests/decode/test9_manifest14/: CMakeLists.txt  prj.conf  testcase.yaml
tests/decode/test9_manifest14/src/: main.c
tests/decode/testA_unordered_map/: CMakeLists.txt  prj.conf  testcase.yaml
tests/decode/testA_unordered_map/src/: main.c
tests/encode/test1_suit/: CMakeLists.txt  prj.conf  testcase.yaml
tests/encode/test1_suit/src/: main.c
tests/encode/test2_simple/: CMakeLists.txt  file_header_copyright.txt  prj.conf  testcase.yaml
tests/encode/test2_simple/src/: main.c
tests/encode/test3_corner_cases/: CMakeLists.txt  prj.conf  testcase.yaml
tests/encode/test3_corner_cases/src/: main.c
tests/encode/test3_strange/: CMakeLists.txt  testcase.yaml
tests/encode/test3_strange/src/: main.c
tests/encode/test4_senml/: CMakeLists.txt  prj.conf  testcase.yaml
tests/encode/test4_senml/src/: main.c
tests/fuzz/: CMakeLists.txt  fuzz_everything.c  fuzz_manifest12.c  fuzz_pet.c  main_entry.c  test-afl.sh  test-libfuzzer.sh
tests/fuzz/crash1/: .cur_input  cmdline  fuzz_bitmap  fuzz_manifest12  fuzzer_stats  plot_data  run.sh
tests/fuzz/crash1/crashes/: README.txt  id:000000,sig:11,src:000135,time:85128,op:havoc,rep:2  id:000001,sig:11,src:000136,time:85996,op:arith8,pos:9,val:-30  id:000002,sig:11,src:000136,time:86300,op:havoc,rep:4  id:000003,sig:11,src:000136,time:86806,op:havoc,rep:4  id:000004,sig:11,src:000146+000141,time:101375,op:splice,rep:2  id:000005,sig:11,src:000088+000159,time:121080,op:splice,rep:8  id:000006,sig:11,src:000137,time:139255,op:MOpt_havoc,rep:4  id:000007,sig:11,src:000010+000155,time:152627,op:MOpt_splice,rep:4  id:000008,sig:11,src:000140+000173,time:227568,op:splice,rep:8  id:000009,sig:11,src:000210,time:269188,op:havoc,rep:4  id:000010,sig:11,src:000226,time:285379,op:havoc,rep:8  id:000011,sig:11,src:000241,time:304935,op:havoc,rep:16  id:000012,sig:11,src:000297,time:371302,op:flip1,pos:147  id:000013,sig:11,src:000354,time:417016,op:havoc,rep:16  id:000014,sig:11,src:000362,time:425920,op:arith8,pos:166,val:-21  id:000015,sig:11,src:000431,time:495764,op:havoc,rep:8  id:000016,sig:11,src:000462+000400,time:529710,op:splice,rep:8  id:000017,sig:11,src:000486,time:565547,op:havoc,rep:16  id:000018,sig:11,src:000142+000509,time:786963,op:MOpt_core_splice,rep:16
tests/unit/test1_unit_tests/: CMakeLists.txt  prj.conf  testcase.yaml
tests/unit/test1_unit_tests/src/: main.c
tests/unit/test2_cpp/: CMakeLists.txt  prj.conf  testcase.yaml
tests/unit/test2_cpp/src/: main.cpp
tests/unit/test3_float16/: CMakeLists.txt  README.md  floats.py  prj.conf  testcase.yaml
tests/unit/test3_float16/src/: main.c
zcbor/: VERSION  __init__.py  prelude.cddl  zcbor.py
zephyr/: CMakeLists.txt  Kconfig  module.yml
(+44 files in other folders)
