#
# Copyright (c) 2023 Nordic Semiconductor ASA
#
# SPDX-License-Identifier: Apache-2.0
#

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'zcbor'
description = 'Code generation and validation using CDDL schemas'
readme = 'README.md'
license = {text = 'Apache'}
requires-python = ">=3.8"
classifiers = [
	'Development Status :: 4 - Beta',
	'Intended Audience :: Developers',
	'License :: OSI Approved :: Apache Software License',
	'Programming Language :: Python :: 3',
	'Programming Language :: C',
	'Topic :: File Formats :: JSON :: JSON Schema',
	'Topic :: Software Development :: Build Tools',
	'Topic :: Software Development :: Code Generators',
]
authors = [{name = 'Nordic Semiconductor ASA'}]
maintainers = [{name = 'Øyvind Rønningstad', email = 'oyvind.ronningstad@nordicsemi.no'}]
dynamic = ['dependencies', 'version']

[project.urls]
Homepage = 'https://github.com/NordicSemiconductor/zcbor'

[project.scripts]
zcbor = 'zcbor:main'

[tool.setuptools]
packages = ['zcbor', 'zcbor.src', 'zcbor.include', 'zcbor.zcbor']
package-dir = {zcbor = '.'}

[tool.setuptools.package-data]
zcbor = ['src/*', 'include/*', 'zcbor/*']

[tool.setuptools.dynamic]
version = {file = 'zcbor/VERSION'}
dependencies = {file = ['scripts/requirements-base.txt']}
